--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "qs": "^6.10.2",
     "vue": "^2.6.11",
