--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "mdbvue": "^6.7.3",
     "qs": "^6.10.2",
+    "v-rating": "^1.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2"
